sort.basic.lessons.sort.basic.bubble.AlgBubbleSort3.scala.error
AlgBubbleSort3:13: error: ';' expected but integer literal found.
	i = =+1
              ^